<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformationScreen">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbInfo"
        android:layout_width="432dp"
        android:layout_height="62dp"
        android:background="#378343"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/abc_vector_test"
        app:layout_constraintBottom_toBottomOf="@+id/tbInfo"
        app:layout_constraintEnd_toEndOf="@+id/tbInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tbInfo"
        app:layout_constraintTop_toTopOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Information"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvHeightWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_sans_bold"
        android:text="@string/height_weight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/txtFeet"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Feet"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/txtInches"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Inches"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/txtCentimetres"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Centimetres"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/txtPounds"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Weight in Lbs"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/txtKilograms"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Weight in Kgs"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.15" />

    <ToggleButton
        android:id="@+id/tbMetric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="ToggleButton"
        android:textOff="METRIC"
        android:textOn="METRIC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.11" />

    <ToggleButton
        android:id="@+id/tbImperial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="IMPERIAL"
        android:textOn="IMPERIAL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tvAgeGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_sans_bold"
        android:text="@string/age_gender"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Age in years"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.311" />

    <ToggleButton
        android:id="@+id/tbFemale"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="Female"
        android:textOn="Female"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.383" />

    <ToggleButton
        android:id="@+id/tbMale"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="Male"
        android:textOn="Male"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/tvGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_sans_bold"
        android:text="@string/goals"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.488" />

    <EditText
        android:id="@+id/txtGoalWeight"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Goal Weight"
        android:inputType="number"
        android:text="0 kgs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/tvGoalsSubheading1"
        android:layout_width="150dp"
        android:layout_height="14dp"
        android:fontFamily="@font/merriweather_sans_bold"
        android:text="Set Weight Goal"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.611" />

    <SeekBar
        android:id="@+id/sbWeight"
        android:layout_width="336dp"
        android:layout_height="43dp"
        android:max="300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/txtGoalCalories"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Goal Calorie Intake"
        android:inputType="number"
        android:text="0 cals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/tvGoalsSubheading2"
        android:layout_width="150dp"
        android:layout_height="14dp"
        android:fontFamily="@font/merriweather_sans_bold"
        android:text="Set Calorie Intake Goal"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.784" />

    <SeekBar
        android:id="@+id/sbCalories"
        android:layout_width="336dp"
        android:layout_height="43dp"
        android:max="10000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.833" />

    <Button
        android:id="@+id/btnCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONTINUE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInfo"
        app:layout_constraintVertical_bias="0.911" />


</androidx.constraintlayout.widget.ConstraintLayout>